// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should render with selected 1`] = `
<div
  class="tss-ht45pd-Toggle-toggle"
>
  <span
    class="tss-1vnrng6-Toggle-label tss-1mmtf61-Toggle-closed"
  >
    somelabel
  </span>
  <span
    class="tss-19z9tok-Toggle-selected"
  >
    Some, Thing, Selected
  </span>
</div>
`;

exports[`<Toggle /> should render with selected as open 1`] = `
<div
  class="tss-ht45pd-Toggle-toggle"
>
  <span
    class="tss-1vnrng6-Toggle-label tss-opof2z-Toggle-open"
  >
    somelabel
  </span>
  <span
    class="tss-19z9tok-Toggle-selected"
  >
    Some, Thing, Selected
  </span>
</div>
`;

exports[`<Toggle /> should render without selected 1`] = `
<div
  class="tss-ht45pd-Toggle-toggle"
>
  <span
    class="tss-1vnrng6-Toggle-label tss-1mmtf61-Toggle-closed"
  >
    somelabel
  </span>
</div>
`;

exports[`<Toggle /> should render without selected as open 1`] = `
<div
  class="tss-ht45pd-Toggle-toggle"
>
  <span
    class="tss-1vnrng6-Toggle-label tss-opof2z-Toggle-open"
  >
    somelabel
  </span>
</div>
`;
